components/layout/footer/footer.module.scss
.footer {
	@apply bg-gradient-radial-at-b from-brand to-brand-500;

	&--alternate {
		@apply bg-skin-bg-inverted;
	}
}

.graphic {
	@apply w-full h-[20vw] relative overflow-hidden;

	@screen lg {
		@apply max-h-64;
	}
}

.curve1 {
	@apply absolute h-full z-0 bg-contrast-50 -left-5p;

	width: 108%;
	border-radius: 50% / 100%;
	border-top-left-radius: 0;
	border-top-right-radius: 0;
}

.curve2 {
	@apply absolute h-full z-0 bg-contrast-50 -left-1/4 opacity-50;

	width: 135%;
	border-radius: 50% / 100%;
	border-top-left-radius: 0;
	border-top-right-radius: 0;
}

.spacing {
	@apply absolute w-full z-0 bg-contrast-50 outline-4 outline-contrast-50 h-10;
}

.inner {
	@apply max-w-4xl block mx-auto;
}

.sections {
	@apply grid gap-24 w-9/10 mx-auto py-xl-5xl justify-center;

	@screen md {
		@apply grid-cols-2 w-full gap-16;
	}
}

.menu {
	@apply p-3 w-full text-sm font-normal flex flex-row-reverse gap-8;

	> a {
		@apply text-contrast-50;
	}
}

